== Changelog ==
= 1.0.3 =
* Plugin guidelines refactoring

= 1.0.2 =
* Fix shipping amount (add taxes)
* "Shipping as food" option 

= 1.0.1 =
* Blocks support

= 1.0.0 =
* Stable version