@@ -1,1 +1,1 @@
-(()=>{"use strict";const e=window.React,t=(window.wp.i18n,window.wc.wcBlocksRegistry),n=window.wp.htmlEntities,o=window.wc.wcSettings,l=()=>{const e=(0,o.getSetting)("voucherly_data",null);if(!e)throw new Error("Voucherly initialization data is not available");return e},i=l(),c=i.icon,r=(0,n.decodeEntities)(i.title)||"Voucherly",a=()=>(0,n.decodeEntities)(i.description||""),s={name:"voucherly",label:(0,e.createElement)((t=>{var n;const{PaymentMethodLabel:o,PaymentMethodIcons:i}=t.components;console.log(l());var a=null!==(n=l().icons)&&void 0!==n?n:[];if(a.length>0)return console.log(a),(0,e.createElement)("div",{style:{display:"flex",flexDirection:"row-reverse"}},r,(0,e.createElement)(i,{icons:a,align:"left"}));const s=(0,e.createElement)("img",{src:c,alt:"Voucherly",name:"Voucherly"});return(0,e.createElement)(o,{text:r,icon:s})}),null),content:(0,e.createElement)(a,null),edit:(0,e.createElement)(a,null),canMakePayment:()=>!0,ariaLabel:"Voucherly",supports:{features:i.supports},icon:c};(0,t.registerPaymentMethod)(s)})();
+(()=>{"use strict";const e=window.React,t=(window.wp.i18n,window.wc.wcBlocksRegistry),n=window.wp.htmlEntities,i=window.wc.wcSettings,l=()=>{const e=(0,i.getSetting)("voucherly_data",null);if(!e)throw new Error("Voucherly initialization data is not available");return e},o=l(),r=o.icon,c=(0,n.decodeEntities)(o.title)||"Voucherly",a=()=>(0,n.decodeEntities)(o.description||""),s={name:"voucherly",label:(0,e.createElement)((t=>{var n;const{PaymentMethodLabel:i,PaymentMethodIcons:o}=t.components;var a=null!==(n=l().icons)&&void 0!==n?n:[];if(a.length>0)return(0,e.createElement)("div",{style:{display:"flex",flexDirection:"row-reverse"}},c,(0,e.createElement)(o,{icons:a,align:"left"}));const s=(0,e.createElement)("img",{src:r,alt:"Voucherly",name:"Voucherly"});return(0,e.createElement)(i,{text:c,icon:s})}),null),content:(0,e.createElement)(a,null),edit:(0,e.createElement)(a,null),canMakePayment:()=>!0,ariaLabel:"Voucherly",supports:{features:o.supports},icon:r};(0,t.registerPaymentMethod)(s)})();
